[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Maximilian Bode <maximilian.bode@tngtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num = "0.3.1"
recap = "0.1.1"
regex = "1.4.2"
serde = "1.0.117"
